--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>OnTimeMove</title>
     <link rel="ICON" type="imge/x-icon" href="./assets/images/favicon.ico">
     <link rel="stylesheet" href="./assets/styles/index.css">
+    <link rel="stylesheet" href="./assets/styles/header.css">
+    <link rel="stylesheet" href="./assets/styles/main.css">
+    <link rel="stylesheet" href="./assets/styles/footer.css">
+    <link rel="stylesheet" href="./assets/styles/media.css">
 </head>
 <body>
     
@@ -18,6 +22,10 @@
                 <a href="#dellivery">Оформить</a>
                 <a href="#reports">Отзывы</a>
             </ul>
+            <div id="burger">
+                <span></span>
+            </div>
+            
         </nav>
         <div class="info">
             <div class="Head_info">
@@ -205,5 +213,6 @@
         </div>
     </footer>
     <script src="./scripts/stars.js"></script>
+    <script src="./scripts/burger.js"></script>
 </body>
 </html>
